# Swift-Pico-Drone

./: frames_2024-11-11_06.55.49.gv  pid_values.yaml
src/lab4/: package.xml  setup.py
src/lab4/launch/: gazebo.launch.py
src/lab6/: package.xml  setup.py
src/lab6/lab6/: capture_image.py
src/lab6/launch/: gazebo.launch.py  rviz.launch.py
src/lab6/urdf/: car.urdf
src/labproj1/: package.xml  setup.cfg  setup.py
src/labproj1/labproj1/: gui.py  server.py
src/lp2/: CMakeLists.txt  package.xml
src/lp2/script/: server.py
src/my_package/: package.xml  setup.py
src/my_package/my_package/: publisher.py
swift_pico/: CMakeLists.txt  package.xml
swift_pico/launch/: task_1b.launch.py
swift_pico/src/: pico_controller.py
swift_pico/task_1b/: metadata.yaml  task_1b_0.db3
