<?xml version="1.0"?>
<package format="3">
  <name>swift_pico</name>
  <version>1.0.0</version>
  <description>Controller Package for Swift Pico</description>
  <maintainer email="stormbreaker.004@gmail.com">Arun P Madhu</maintainer>
  <license>Apache-2.0</license>
  <author>Arun P Madhu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>swift_msgs</depend>
  <depend>pid_msg</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>

  <!-- Additional dependencies -->
  <depend>ros_gz</depend>
  <depend>sdformat_urdf</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rotors_swift_description</depend>
  <depend>rotors_swift_gazebo</depend>

  <!-- For launching with ros2 launch -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
